# agentgrid

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.control-plane  Dockerfile.node-daemon  LICENSE  README.md  agentgrid-development-plan.md  agentgrid-implementation-plan.md  cp-test.db  cp-test.db-shm  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/acp/: Cargo.toml
crates/acp/src/: approval.rs  client.rs  codec.rs  gateway.rs  lib.rs  methods.rs  server.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: backend.rs  lib.rs
crates/adapters/tests/: conformance.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  tui.rs
crates/common/: Cargo.toml
crates/common/src/: approval.rs  cluster.rs  context.rs  lib.rs  mcp.rs  policy.rs  profile.rs  state_machine.rs  workflow.rs
crates/control-plane/: Cargo.toml
crates/control-plane/migrations/: 0001_init.sql  0002_cancel_timeout.sql  0005_artifacts.sql  0006_users.sql  0007_task_validation.sql  0008_task_error_code.sql  0009_attempt_ack_deadline.sql  0011_approvals.sql  0012_workflows.sql  0013_workflow_repository.sql  0014_workflow_placement.sql  0017_approval_scope.sql  0018_conversations.sql  0019_acp_session_resume.sql  0022_profile_secrets_caps.sql  0023_workflow_schedules.sql  0024_attempt_provenance.sql  0025_mcp_servers.sql  0026_workflow_budget.sql  0027_plan_expansion.sql  0028_workflow_messages.sql  0029_artifact_binary.sql  0030_step_timings.sql
crates/control-plane/src/: lib.rs  main.rs  store.rs  workflow.rs
crates/control-plane/src/store/: approvals.rs  profiles.rs  skills.rs  workflows.rs
crates/control-plane/tests/: agent_session_test.rs  api.rs  migration_compat.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/node-daemon/: Cargo.toml
crates/node-daemon/src/: git.rs  main.rs  outbox.rs
crates/skills/tests/: skills_test.rs
deploy/: install-node.sh
deploy/compose/: down.sh  up.sh
docs/: acp-interop.md  upgrade-0.1.0-to-0.1.1.md
docs/decisions/: 0001-mvp-scope.md  0002-zeroshot-ownership.md  0003-execution-backends.md  threat-model.md
docs/deploy/: reverse-proxy.md
tests/e2e/: run-cp-restart.sh  run-disk-full.sh  run-outbox.sh  run-workflow.sh  run.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css
web/src/components/: Dashboard.tsx  Login.tsx  NewTask.tsx  Nodes.tsx  TaskDetails.tsx  Workflows.tsx  util.tsx
