[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/control-plane",
    "crates/node-daemon",
    "crates/cli",
    "crates/adapters",
    "crates/skills",
    "crates/acp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5", features = ["util"] }
sha2 = "0.10"
async-stream = "0.3"
futures-core = "0.3"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
rand = "0.8"
agentgrid-common = { path = "crates/common" }
agentgrid-adapters = { path = "crates/adapters" }

# Stage 6.2: release profile tuned for small static binaries.
[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
