[package]
name = "agentgrid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ag"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
agentgrid-common.workspace = true
# Stage 11.5 TUI
ratatui.workspace = true
crossterm.workspace = true
