[package]
name = "agentgrid-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "agentgrid-control-plane"
path = "src/main.rs"

[lib]
name = "agentgrid_control_plane"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
agentgrid-common.workspace = true

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
