[package]
name = "agentgrid-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "agentgrid-control-plane"
path = "src/main.rs"

[lib]
name = "agentgrid_control_plane"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sha2.workspace = true
async-stream.workspace = true
futures-core.workspace = true
agentgrid-common.workspace = true

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
