[package]
name = "agentgrid-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "agentgrid-control-plane"
path = "src/main.rs"

[lib]
name = "agentgrid_control_plane"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sha2.workspace = true
async-stream.workspace = true
futures-core.workspace = true
argon2.workspace = true
password-hash.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
agentgrid-common.workspace = true

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
libc = "0.2"

# TLS termination (rustls, no system OpenSSL) — opt-in via AGENTGRID_TLS_CERT/_KEY.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
